--- a/HTML/classrooms.html
+++ b/HTML/classrooms.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="/Styles/Shared/header.css">
     <link rel="stylesheet" href="/Styles/classrooms.css">
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script></head>
-<body>
+    <link rel="stylesheet" href="/Styles/Shared/breaking-news.css">
+    <link rel="stylesheet" href="/Styles/Shared/scrollbar.css">
+    <body>
 
   <header>
     <div class="logo">
@@ -85,6 +87,25 @@
     </div>-->
 
     
+    <div class="news-container">
+      <div class="title">
+          Breaking News
+      </div>
+
+      <ul>
+          <li>
+            Prepare for the upcoming Math Test           
+          </li>
+          <li>
+            Complete and submit the Chemistry Worksheet           
+          </li>
+          <li>
+            Don't forget to complete your Biology Homework on [insert topic] by [insert deadline]. Make sure to review your notes and do your best!
+          </li>
+      </ul>
+   </div>
+
+
     <script type="module" src="/Scripts/Shared/header.js"></script>
     <script type="module" src="/Scripts/classrooms.js"></script>
 </body>
