--- a/HTML/setting.html
+++ b/HTML/setting.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/Styles/Shared/header.css">
     <link rel="stylesheet" href="/Styles/setting.css">
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script></head>
-<body>
+    <link rel="stylesheet" href="/Styles/Shared/scrollbar.css">
+    <body>
 
   <header>
     <div class="logo">
