--- a/HTML/LoginPage.html
+++ b/HTML/LoginPage.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script></head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/Styles/Shared/scrollbar.css">
 </head>
 <body>
 	<header>
