--- a/HTML/eachClassRoom.html
+++ b/HTML/eachClassRoom.html
@@ -10,7 +10,11 @@
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script>
     <link rel="stylesheet" href="/Styles/Shared/chatBot.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0&family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
-  
+    <link rel="stylesheet" href="/Styles/Shared/scrollbar.css">
+    <link rel="stylesheet" href="/Styles/Shared/scrollbar.css">
+    <link rel="stylesheet" href="/Styles/Shared/alert-box.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+
 </head>
 <body>
 
@@ -220,14 +224,28 @@
 
 
 
-
+      <div class="container-alert">
+        <input type="checkbox" id="check">
+        <div class="background"></div>
+  
+        <div class="alert_box">
+          <div class="icon">
+            <i class="fas fa-exclamation"></i>
+          </div>
+          <header>Alert</header>
+          <p>Prepare for the upcoming Math Test</p>
+          <div class="btns">
+            <label for="check">Ok</label>
+          </div>
+        </div>
+      </div>
 
 
     
       <!-- Linking Emoji Mart script for emoji picker -->
       <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
       <script src="/Scripts/Shared/chatBot.js"></script>
-
+      <script type="module" src="/Scripts/Shared/alert-box.js"></script>
     <script type="module" src="/Scripts/Shared/header.js"></script>
     <script type="module" src="/Scripts/eachClassRoom.js"></script>
 </body>
