--- a/HTML/role.html
+++ b/HTML/role.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/Styles/Shared/header.css">
     <link rel="stylesheet" href="/Styles/role.css">
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script>
-
+    <link rel="stylesheet" href="/Styles/Shared/scrollbar.css">
 </head>
 <body>
     <header>
