--- a/Teacher_Panel/Student/teacher-students.html
+++ b/Teacher_Panel/Student/teacher-students.html
@@ -6,11 +6,13 @@
     <title>Class Rooms</title>
     <link rel=stylesheet id=google-fonts-1-css href="https://fonts.googleapis.com/css?family=Poppins%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=swap&amp;ver=6.6" media=all>
     <link rel="stylesheet" href="teacher-students.css">
-    <link rel="stylesheet" href="teacher-panel.css">
+    <link rel="stylesheet" href="/Styles/Shared/teacher-panel.css">
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script></head>
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel=stylesheet id=google-fonts-1-css href="https://fonts.googleapis.com/css?family=Poppins%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=swap&amp;ver=6.6" media=all>
-    <body>
+    <link rel="stylesheet" href="/Styles/Shared/scrollbar.css">
+</html>
+<body>
 
     <div class="sidebar">
         <div class="logo-details">
@@ -31,7 +33,7 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="/Teacher_Panel/Classes/teacher-classes.html">
                 <i class="fa-solid fa-chalkboard-user"></i>
                 <span class="links_name">Classes</span>
               </a>
@@ -93,7 +95,7 @@
         </nav>
         
         <div class="table">
-
+          <button class="edit-btn"><i class="fa-solid fa-pen-to-square"></i> Edit</button>
         <table>
           <thead>
             <tr>
@@ -102,18 +104,26 @@
               <th>HW 2</th>
               <th>HW 3</th>
               <th>HW 4</th>
+              <th>HW 5</th>
+
 
               <th>CW 1</th>
               <th>CW 2</th>
               <th>CW 3</th>
+              <th>CW 4</th>
+
 
               <th>WK 1</th>
               <th>WK 2</th>
               <th>WK 3</th>
+              <th>WK 4</th>
+
 
               <th>TS 1</th>
               <th>TS 2</th>
               <th>TS 3</th>
+              <th>TS 4</th>
+
 
               <th>Total</th>
             </tr>
@@ -137,6 +147,10 @@
               <td>100</td>
               <td>100</td>
               <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
             </tr>
           </tbody>
 
@@ -157,6 +171,10 @@
               <td>100</td>
               <td>100</td>
               <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
             </tr>
           </tbody>
 
@@ -175,25 +193,6 @@
               <td>100</td>
               <td>100</td>
               <td>100</td>
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>
-            </tr>
-          </tbody>
-
-
-
-
-          <tbody>
-            <tr>
-              <td>Arafat</td>
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>            
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>            
               <td>100</td>
               <td>100</td>
               <td>100</td>
@@ -225,6 +224,10 @@
               <td>100</td>
               <td>100</td>
               <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
             </tr>
           </tbody>
 
@@ -248,8 +251,13 @@
               <td>100</td>
               <td>100</td>
               <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
             </tr>
           </tbody>
+
 
 
 
@@ -266,24 +274,6 @@
               <td>100</td>
               <td>100</td>
               <td>100</td>
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>
-            </tr>
-          </tbody>
-
-
-
-          <tbody>
-            <tr>
-              <td>Arafat</td>
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>            
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>            
               <td>100</td>
               <td>100</td>
               <td>100</td>
@@ -314,24 +304,6 @@
               <td>100</td>
               <td>100</td>
               <td>100</td>
-            </tr>
-          </tbody>
-
-
-
-          <tbody>
-            <tr>
-              <td>Arafat</td>
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>            
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>            
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>
               <td>100</td>
               <td>100</td>
               <td>100</td>
@@ -354,23 +326,6 @@
               <td>100</td>
               <td>100</td>
               <td>100</td>
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>
-            </tr>
-          </tbody>
-
-
-          <tbody>
-            <tr>
-              <td>Arafat</td>
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>            
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>            
               <td>100</td>
               <td>100</td>
               <td>100</td>
@@ -401,24 +356,6 @@
               <td>100</td>
               <td>100</td>
               <td>100</td>
-            </tr>
-          </tbody>
-
-
-
-          <tbody>
-            <tr>
-              <td>Arafat</td>
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>            
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>            
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>
               <td>100</td>
               <td>100</td>
               <td>100</td>
@@ -441,24 +378,6 @@
               <td>100</td>
               <td>100</td>
               <td>100</td>
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>
-            </tr>
-          </tbody>
-
-
-
-          <tbody>
-            <tr>
-              <td>Arafat</td>
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>            
-              <td>100</td>
-              <td>100</td>
-              <td>100</td>            
               <td>100</td>
               <td>100</td>
               <td>100</td>
@@ -489,6 +408,35 @@
               <td>100</td>
               <td>100</td>
               <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+            </tr>
+          </tbody>
+
+
+          <tbody>
+            <tr>
+              <td>Arafat</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>            
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>            
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
             </tr>
           </tbody>
 
@@ -511,6 +459,10 @@
               <td>100</td>
               <td>100</td>
               <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
             </tr>
           </tbody>
 
@@ -525,6 +477,140 @@
               <td>100</td>
               <td>100</td>
               <td>100</td>            
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+            </tr>
+          </tbody>
+
+
+
+          <tbody>
+            <tr>
+              <td>Arafat</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>            
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>            
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+            </tr>
+          </tbody>
+
+
+
+          <tbody>
+            <tr>
+              <td>Arafat</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>            
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>            
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+            </tr>
+          </tbody>
+
+
+
+          <tbody>
+            <tr>
+              <td>Arafat</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>            
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>            
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+            </tr>
+          </tbody>
+
+
+
+          <tbody>
+            <tr>
+              <td>Arafat</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>            
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>            
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+            </tr>
+          </tbody>
+
+
+
+          <tbody>
+            <tr>
+              <td>Arafat</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>            
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>            
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
+              <td>100</td>
               <td>100</td>
               <td>100</td>
               <td>100</td>
