--- a/HTML/role.html
+++ b/HTML/role.html
@@ -84,6 +84,6 @@
          <button class="submit-btn">Submit</button>
     </div>
 
-     <script src="/Scripts/role.js"></script>
+     <script src="/Scripts/role.js" type="module"></script>
 </body>
 </html>
