--- a/HTML/LoginPage.html
+++ b/HTML/LoginPage.html
@@ -18,7 +18,7 @@
             <img src="/Images/LoginImg.svg">
 		</div>
 		<div class="login-content">
-			<form action="classrooms.html">
+			<form>
 				<img class="logo" src="/Images/penta Class Logo.svg">
            		<div class="input-div one">
            		   <div class="i">
@@ -43,6 +43,6 @@
             </form>
         </div>
     </div>
-    <script type="text/javascript" src="/Scripts/LoginPage.js"></script>
+	<script type="module" src="../Scripts/LoginPage.js"></script>
 </body>
 </html>
