--- a/HTML/Premium.html
+++ b/HTML/Premium.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Class Rooms</title>
+    <title>Premium</title>
     <link rel=stylesheet id=google-fonts-1-css href="https://fonts.googleapis.com/css?family=Poppins%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=swap&amp;ver=6.6" media=all>
     <link rel="stylesheet" href="/Styles/Shared/header.css">
-    <link rel="stylesheet" href="/Styles/classrooms.css">
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script></head>
-    <link rel="stylesheet" href="/Styles/Shared/breaking-news.css">
     <link rel="stylesheet" href="/Styles/Shared/scrollbar.css">
 <body>
 
@@ -69,49 +67,18 @@
     </div>
 
     <li class="links">
-      <a href="#" class="classroom-link" style="border-color: #4CC9FE;color: #4CC9FE;">Class Rooms</a>
-      <a href="" class="classroom-assignment">Assignments</a>
-      <a href="createdRooms.html" class="classroom-rooms">Join Class</a>
-      <a href="setting.html" class="classroom-setting">Settings</a>
-      <a href="profile.html" class="classroom-profile">Profile</a>
+      <a href="profile.html" class="classroom-profile">Go Back</a>
     </li>
 
     <div class="button-premium">
-      <a href="../HTML/Premium.html"> <button><i class="fa-solid fa-rocket"></i> Go Premium</button></a>
+      <a href="../HTML/Premium.html"><button>Go Premium</button></a>
    </div>
 
   </header>
 
-    <div class="classrooms" >
 
-    </div>
-
-    <!--<div class="no-class-div">
-     <a href="createdRooms.html"> <i class="fa-solid fa-circle-plus no-class-found"></i></a>
-      <h1 class="no-class-found-h1">No Class Found</h1>
-    </div>-->
-
-    
-    <div class="news-container">
-      <div class="title">
-          Breaking News
-      </div>
-
-      <ul>
-          <li>
-            Prepare for the upcoming Math Test           
-          </li>
-          <li>
-            Complete and submit the Chemistry Worksheet           
-          </li>
-          <li>
-            Don't forget to complete your Biology Homework on [insert topic] by [insert deadline]. Make sure to review your notes and do your best!
-          </li>
-      </ul>
-   </div>
+  
 
 
-    <script type="module" src="/Scripts/Shared/header.js"></script>
-    <script type="module" src="/Scripts/classrooms.js"></script>
 </body>
 </html>
