--- a/HTML/SigninPage.html
+++ b/HTML/SigninPage.html
@@ -17,8 +17,8 @@
 		<div class="img">
             <img src="/Images/SigninImg.svg">
 		</div>
-		<div class="login-content">
-			<form action="role.html">
+		<div class="login-content" >
+			<form id="signInForm"><!--role.html-->
 				<img class="logo" src="/Images/penta Class Logo.svg">
 
            		<div class="input-div one">
@@ -27,7 +27,7 @@
            		   </div>
            		   <div class="div">
            		   		<h5>Username</h5>
-           		   		<input required type="text" class="input">
+           		   		<input required type="text" class="input name-user">
            		   </div>
            		</div>
 
@@ -37,7 +37,7 @@
 				</div>
 				<div class="div">
 						<h5>Email</h5>
-						 <input required type="email" class="input">
+						 <input required type="email" class="input email-user">
 				 </div>
 			  	</div>
 
@@ -47,7 +47,7 @@
 					<i class="fa-solid fa-unlock-keyhole"></i>           		   </div>
            		   <div class="div">
            		    	<h5>Password</h5>
-           		    	<input required type="password" class="input">
+           		    	<input required type="password" class="input pass-user">
             	   </div>
             	</div>
 
@@ -65,6 +65,6 @@
             </form>
         </div>
     </div>
-    <script type="text/javascript" src="/Scripts/SigninPage.js"></script>
+    <script src="../Scripts/SigninPage.js" type="module"></script>
 </body>
 </html>
