--- a/Teacher_Panel/Announcement/announcement.html
+++ b/Teacher_Panel/Announcement/announcement.html
@@ -14,68 +14,77 @@
     </html>
 <body>
 
-    <div class="sidebar">
-        <div class="logo-details">
-          <i class='bx bxl-c-plus-plus'></i>
-          <span class="logo_name">Penta Class</span>
-        </div>
-          <ul class="nav-links">
-            <li>
-              <a href="/Teacher_Panel/Teacher-Dashboard/teacher-dashboard.html" class="#">
-                <i class='bx bx-grid-alt' ></i>
-                <span class="links_name">Dashboard</span>
-              </a>
-            </li>
-            <li>
-              <a href="/Teacher_Panel/Student/teacher-students.html">
-                <i class="fa-solid fa-user-astronaut"></i>
-                <span class="links_name">Students</span>
-              </a>
-            </li>
-            <li>
-              <a href="/Teacher_Panel/Classes/teacher-classes.html" class="#">
-                <i class="fa-solid fa-chalkboard-user"></i>
-                <span class="links_name">Classes</span>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="active">
-                <i class="fa-solid fa-bullhorn"></i>
-                <span class="links_name">Announcement</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="fa-solid fa-comment"></i>
-                <span class="links_name">Messages</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="fa-solid fa-file-circle-check"></i>
-                <span class="links_name">Answers</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="fa-solid fa-window-restore"></i>
-                <span class="links_name">Histories</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="fa-regular fa-calendar-days"></i>
-                <span class="links_name">Timetable</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="fa-solid fa-book"></i>
-                <span class="links_name">Resources</span>
-              </a>
-            </li>
-          </ul>
+  <div class="sidebar">
+      <div class="logo-details">
+        <i class='bx bxl-c-plus-plus'></i>
+        <span class="logo_name">Penta Class</span>
       </div>
+        <ul class="nav-links">
+          <li>
+            <a href="/Teacher_Panel/Teacher-Dashboard/teacher-dashboard.html" class="#">
+              <i class='bx bx-grid-alt' ></i>
+              <div class="notification-Dashboard"></div>
+              <span class="links_name">Dashboard</span>
+            </a>
+          </li>
+          <li>
+            <a href="/Teacher_Panel/Student/teacher-students.html">
+              <i class="fa-solid fa-user-astronaut"></i>
+              <div class="notification-Students"></div>
+              <span class="links_name">Students</span>
+            </a>
+          </li>
+          <li>
+            <a href="/Teacher_Panel/Classes/teacher-classes.html" class="#">
+              <i class="fa-solid fa-chalkboard-user"></i>
+              <div class="notification-Classes"></div>
+              <span class="links_name">Classes</span>
+            </a>
+          </li>
+          <li>
+            <a href="/Teacher_Panel/Announcement/announcement.html" class="active">
+              <i class="fa-solid fa-bullhorn"></i>
+              <div class="notification-Announcement"></div>
+              <span class="links_name">Announcement</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <i class="fa-solid fa-comment"></i>
+              <div class="notification-message"></div>
+              <span class="links_name">Messages</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-solid fa-file-circle-check"></i>
+              <div class="notification-Answers"></div>
+              <span class="links_name">Answers</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-solid fa-window-restore"></i>
+              <div class="notification-Histories"></div>
+              <span class="links_name">Histories</span>
+            </a>
+          </li>
+          <li>
+            <a href="/Teacher_Panel/Time-Table/time-table.html">
+              <i class="fa-regular fa-calendar-days"></i>
+              <div class="notification-Timetable"></div>
+              <span class="links_name">Timetable</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-solid fa-book"></i>
+              <div class="notification-Resources"></div>
+              <span class="links_name">Resources</span>
+            </a>
+          </li>
+        </ul>
+    </div>
 
       <section class="home-section">
         <nav>
