sign in page link fix

--- a/HTML/SigninPage.html
+++ b/HTML/SigninPage.html
@@ -2,24 +2,24 @@
 <html>
 <head>
 	<title>Sign In</title>
-	<link rel="stylesheet" type="text/css" href="/Styles/SigninPage.css">
+	<link rel="stylesheet" type="text/css" href="../Styles/SigninPage.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script></head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/Styles/Shared/scrollbar.css">
+    <link rel="stylesheet" href="../Styles/Shared/scrollbar.css">
 </head>
 <body>
 	<header>
-		<a href="LoginPage.html" class=""><button>Log In</button></a>
+		<a href="../HTML/LoginPage.html" class=""><button>Log In</button></a>
 	</header>
-	<img class="wave" src="/Images/wave.png">
+	<img class="wave" src="../Images/wave.png">
 	<div class="container">
 		<div class="img">
-            <img src="/Images/SigninImg.svg">
+            <img src="../Images/SigninImg.svg">
 		</div>
 		<div class="login-content" >
 			<form id="signInForm"><!--role.html-->
-				<img class="logo" src="/Images/penta Class Logo.svg">
+				<img class="logo" src="../Images/penta Class Logo.svg">
 
            		<div class="input-div one">
            		   <div class="i">
