--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="/Styles/Shared/header.css">
     <link rel="stylesheet" href="/Styles/profile.css">
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script></head>
-<body>
+    <link rel="stylesheet" href="../Styles/loading.css">
+    <script type="module" src="../Scripts/LoadingPage.js"></script>
+  
+    <body>
 
   <header>
     <div class="logo">
@@ -73,7 +76,14 @@
       <a href="setting.html" class="classroom-setting">Settings</a>
       <a href="profile.html" class="classroom-profile" style="border-color: #4CC9FE;color: #4CC9FE;">Profile</a>
     </li>
+    <div class="button-premium">
+      <a href="../HTML/Premium.html"> <button><i class="fa-solid fa-rocket"></i> Go Premium</button></a>
+   </div>
+
   </header>
+
+  <div class="for-teachers">
+  </div>
 
   <div class="container">
 
