--- a/HTML/setting.html
+++ b/HTML/setting.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="/Styles/setting.css">
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script></head>
     <link rel="stylesheet" href="/Styles/Shared/scrollbar.css">
+    <link rel="stylesheet" href="../Styles/loading.css">
+    <script type="module" src="../Scripts/LoadingPage.js"></script>
+  
     <body>
 
   <header>
@@ -74,7 +77,14 @@
       <a href="" class="classroom-setting" style="border-color: #4CC9FE;color: #4CC9FE;">Settings</a>
       <a href="profile.html" class="classroom-profile">Profile</a>
     </li>
+    <div class="button-premium">
+      <a href="../HTML/Premium.html"> <button><i class="fa-solid fa-rocket"></i> Go Premium</button></a>
+   </div>
+
   </header>
+
+  <div class="for-teachers">
+  </div>
 
 
 
