--- a/Teacher_Panel/Classes/teacher-classes.html
+++ b/Teacher_Panel/Classes/teacher-classes.html
@@ -140,6 +140,10 @@
 
     </div>
 
+
+    <div id="toastBox">
+
+    </div>
   
 
     <script type="module" src="/Scripts/Shared/teacher-panel.js"></script>
