--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penta Class</title>
     <style>
+        body{
+            background-color: #343f4f;
+        }
                 /* Parent container should be a flex container */
         .parent-container {
             display: flex;               /* Use Flexbox */
