--- a/HTML/homePage.html
+++ b/HTML/homePage.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Website Homepage HTML and CSS | CodingNepal</title>
-    <link rel="stylesheet" href="/Styles/homePage.css" />
-    <link rel="stylesheet" href="/Styles/Shared/header.css">
+    <link rel="stylesheet" href="../Styles/homePage.css" />
+    <link rel="stylesheet" href="../Styles/Shared/header.css">
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script></head>
     <link rel=stylesheet id=google-fonts-1-css href="https://fonts.googleapis.com/css?family=Poppins%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=swap&amp;ver=6.6" media=all>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0&family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
-    <link rel="stylesheet" href="/Styles/Shared/chatBot.css" />
-    <link rel="stylesheet" href="/Styles/Shared/scrollbar.css">
+    <link rel="stylesheet" href="../Styles/Shared/chatBot.css" />
+    <link rel="stylesheet" href="../Styles/Shared/scrollbar.css">
   </head>
   <body>
  
@@ -154,6 +154,6 @@
           
         <!-- Linking Emoji Mart script for emoji picker -->
         <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
-        <script src="/Scripts/Shared/chatBot.js"></script>
+        <script src="../Scripts/Shared/chatBot.js"></script>
   </body>
 </html>
