--- a/HTML/homework-page.html
+++ b/HTML/homework-page.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class Rooms</title>
     <link rel=stylesheet id=google-fonts-1-css href="https://fonts.googleapis.com/css?family=Poppins%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=swap&amp;ver=6.6" media=all>
-    <link rel="stylesheet" href="/Styles/Shared/header.css">
-    <link rel="stylesheet" href="/Styles/eachClassRoom.css">
+    <link rel="stylesheet" href="../Styles/Shared/header.css">
+    <link rel="stylesheet" href="../Styles/eachClassRoom.css">
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script>
-    <link rel="stylesheet" href="/Styles/Shared/chatBot.css">
+    <link rel="stylesheet" href="../Styles/Shared/chatBot.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0&family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
-    <link rel="stylesheet" href="/Styles/Shared/scrollbar.css">
-    <link rel="stylesheet" href="/Styles/Shared/scrollbar.css">
-    <link rel="stylesheet" href="/Styles/Shared/alert-box.css">
+    <link rel="stylesheet" href="../Styles/Shared/scrollbar.css">
+    <link rel="stylesheet" href="../Styles/Shared/scrollbar.css">
+    <link rel="stylesheet" href="../Styles/Shared/alert-box.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-
+    <!--<link rel="stylesheet" href="../Styles/loading.css">-->
+   <!-- <script type="module" src="../Scripts/LoadingPage.js"></script>-->
+  
 </head>
 <body>
 
@@ -75,13 +77,21 @@
     </div>
 
     <li class="links">
-      <a href="classrooms.html" class="classroom-link">Class Rooms</a>
+      <a href="../HTML/classrooms.html" class="classroom-link">Class Rooms</a>
       <a href="" class="classroom-assignment">Assignments</a>
-      <a href="createdRooms.html" class="classroom-rooms">Join Class</a>
-      <a href="setting.html" class="classroom-setting">Settings</a>
-      <a href="profile.html" class="classroom-profile">Profile</a>
+      <a href="../HTML/createdRooms.html" class="classroom-rooms">Join Class</a>
+      <a href="../HTML/setting.html" class="classroom-setting">Settings</a>
+      <a href="../HTML/profile.html" class="classroom-profile">Profile</a>
     </li>
+
+    <div class="button-premium">
+      <a href="../HTML/Premium.html"> <button><i class="fa-solid fa-rocket"></i> Go Premium</button></a>
+   </div>
+
   </header>
+
+  <div class="for-teachers">
+  </div>
 
 
 
@@ -152,7 +162,7 @@
             <h1 class="upload-h1">Upload HomeWork</h1>
 
             <form action="#">
-              <input class="file-input" type="file" name="file" hidden multiple webkitdirectory>
+              <input class="file-input" type="file" name="file" hidden multiple >
               <i class="fas fa-cloud-upload-alt"></i>
               <p>Browse File to Upload</p>
             </form>
@@ -242,12 +252,11 @@
       </div>
 
 
-    
       <!-- Linking Emoji Mart script for emoji picker -->
       <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
-      <script src="/Scripts/Shared/chatBot.js"></script>
-      <script type="module" src="/Scripts/Shared/alert-box.js"></script>
-    <script type="module" src="/Scripts/Shared/header.js"></script>
-    <script type="module" src="/Scripts/eachClassRoom.js"></script>
+      <script src="../Scripts/Shared/chatBot.js"></script>
+      <script type="module" src="../Scripts/Shared/alert-box.js"></script>
+    <script type="module" src="../Scripts/Shared/header.js"></script>
+    <script type="module" src="../Scripts/eachClassRoom.js"></script>
 </body>
 </html>
