--- a/HTML/classrooms.html
+++ b/HTML/classrooms.html
@@ -69,7 +69,7 @@
     </div>
   
     <ul class="links">
-      <li><a href="#" class="classroom-link">Class Rooms</a></li>
+      <li><a href="#" class="classroom-link" style="border-color: #4CC9FE;color: #4CC9FE;">Class Rooms</a></li>
       <li><a href="" class="classroom-assignment">Assignments</a></li>
       <li><a href="../HTML/createdRooms.html" class="classroom-rooms">Join Class</a></li>
       <li><a href="../HTML/setting.html" class="classroom-setting">Settings</a></li>
