--- a/HTML/mark-page.html
+++ b/HTML/mark-page.html
@@ -22,8 +22,7 @@
     <div class="logo">
       <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
         width="200pt" height="100pt" viewBox="0 0 300.000000 139.000000"
-        preserveAspectRatio="xMidYMid meet" class="svg-logo" >
-
+        preserveAspectRatio="xMidYMid meet" class="svg-logo">
         <g transform="translate(0.000000,139.000000) scale(0.100000,-0.100000)"
         fill="#000000" stroke="none">
         <path fill="#4CC9FE" d="M1346 964 c-13 -13 -16 -38 -15 -132 1 -64 6 -123 12 -129 12 -16 99
@@ -71,22 +70,24 @@
         20 -45 20 -14 0 -34 -9 -45 -20z m80 -20 c26 -48 -25 -89 -63 -51 -18 17 -19
         24 -9 46 14 31 56 34 72 5z"/>
         </g>
-        </svg>
+     </svg>
     </div>
-
-    <li class="links">
-      <a href="../HTML/classrooms.html" class="classroom-link">Class Rooms</a>
-      <a href="" class="classroom-assignment">Assignments</a>
-      <a href="../HTML/createdRooms.html" class="classroom-rooms">Join Class</a>
-      <a href="../HTML/setting.html" class="classroom-setting">Settings</a>
-      <a href="../HTML/profile.html" class="classroom-profile">Profile</a>
-    </li>
-
-
+  
+    <ul class="links">
+      <li><a href="#" class="classroom-link">Class Rooms</a></li>
+      <li><a href="" class="classroom-assignment">Assignments</a></li>
+      <li><a href="../HTML/createdRooms.html" class="classroom-rooms">Join Class</a></li>
+      <li><a href="../HTML/setting.html" class="classroom-setting">Settings</a></li>
+      <li><a href="../HTML/profile.html" class="classroom-profile">Profile</a></li>
+    </ul>
+  
+    <div class="button-premium">
+      <a href="../HTML/Premium.html"><button><i class="fa-solid fa-rocket"></i> Go Premium</button></a>
+    </div>
   </header>
 
 
-  <div class="classroom-links">
+
 
 
     <li class="links">
@@ -98,7 +99,6 @@
     </li>
 
 
-  </div>
 
   <div class="for-teachers">
   </div>
@@ -111,8 +111,8 @@
   <div class="classDetail">
     <div class="class-name-plus-start">
       <div class="classNamePlusTeacherName">
-        <h1 class="classRoomName" id="classRoomName">Loading...</h1>
-        <h4 class="teacherName" id="teacher-name">By Unknown</h4>
+        <h1 class="classRoomName" id="classRoomName"></h1>
+        <h4 class="teacherName" id="teacher-name"></h4>
       </div>
       <i class="fa-solid fa-star fa-start"></i>
       <i class="fa-solid fa-star"></i>
