--- a/Teacher_Panel/Announcement/announcement.html
+++ b/Teacher_Panel/Announcement/announcement.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class Rooms</title>
     <link rel=stylesheet id=google-fonts-1-css href="https://fonts.googleapis.com/css?family=Poppins%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=swap&amp;ver=6.6" media=all>
-    <link rel="stylesheet" href="announcement.css">
-    <link rel="stylesheet" href="/Styles/Shared/teacher-panel.css">
+    <link rel="stylesheet" href="../../Teacher_Panel/Announcement/announcement.html">
+    <link rel="stylesheet" href="../Styles/Shared/teacher-panel.css">
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script></head>
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel=stylesheet id=google-fonts-1-css href="https://fonts.googleapis.com/css?family=Poppins%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=swap&amp;ver=6.6" media=all>
-    <link rel="stylesheet" href="/Styles/Shared/scrollbar.css">
+    <link rel="stylesheet" href="../Styles/Shared/scrollbar.css">
     </html>
 <body>
 
@@ -21,28 +21,28 @@
       </div>
         <ul class="nav-links">
           <li>
-            <a href="/Teacher_Panel/Teacher-Dashboard/teacher-dashboard.html" class="#">
+            <a href="../../Teacher_Panel/Teacher-Dashboard/teacher-dashboard.html" class="#">
               <i class='bx bx-grid-alt' ></i>
               <div class="notification-Dashboard"></div>
               <span class="links_name">Dashboard</span>
             </a>
           </li>
           <li>
-            <a href="/Teacher_Panel/Student/teacher-students.html">
+            <a href="../../Teacher_Panel/Student/teacher-students.html">
               <i class="fa-solid fa-user-astronaut"></i>
               <div class="notification-Students"></div>
               <span class="links_name">Students</span>
             </a>
           </li>
           <li>
-            <a href="/Teacher_Panel/Classes/teacher-classes.html" class="#">
+            <a href="../../Teacher_Panel/Classes/teacher-classes.html" class="#">
               <i class="fa-solid fa-chalkboard-user"></i>
               <div class="notification-Classes"></div>
               <span class="links_name">Classes</span>
             </a>
           </li>
           <li>
-            <a href="/Teacher_Panel/Announcement/announcement.html" class="active">
+            <a href="../../Teacher_Panel/Announcement/announcement.html" class="active">
               <i class="fa-solid fa-bullhorn"></i>
               <div class="notification-Announcement"></div>
               <span class="links_name">Announcement</span>
@@ -70,7 +70,7 @@
             </a>
           </li>
           <li>
-            <a href="/Teacher_Panel/Time-Table/time-table.html">
+            <a href="../../Teacher_Panel/Time-Table/time-table.html">
               <i class="fa-regular fa-calendar-days"></i>
               <div class="notification-Timetable"></div>
               <span class="links_name">Timetable</span>
@@ -197,9 +197,9 @@
 
   
 
-    <script type="module" src="/Scripts/eachClassRoom.js"></script>
-    <script type="module" src="/Scripts/Shared/teacher-panel.js"></script>
-    <script type="module" src="announcement.js"></script>
-    <script type="module" src="/Scripts/Shared/teacher-shared.js"></script>
+    <script type="module" src="../../Scripts/eachClassRoom.js"></script>
+    <script type="module" src="../../Scripts/Shared/teacher-panel.js"></script>
+    <script type="module" src="../../Teacher_Panel/Announcement/announcement.js"></script>
+    <script type="module" src="../../Scripts/Shared/teacher-shared.js"></script>
   </body>
 </html>
