--- a/Teacher_Panel/Announcement/announcement.html
+++ b/Teacher_Panel/Announcement/announcement.html
@@ -197,7 +197,7 @@
 
   
 
-    <script type="module" src="../../Scripts/mark-page.js"></script>
+   <!-- <script type="module" src="../../Scripts/mark-page.js"></script>-->
     <script type="module" src="../../Scripts/Shared/teacher-panel.js"></script>
     <script type="module" src="../../Teacher_Panel/Announcement/announcement.js"></script>
     <script type="module" src="../../Scripts/Shared/teacher-shared.js"></script>
