--- a/HTML/classrooms.html
+++ b/HTML/classrooms.html
@@ -10,7 +10,10 @@
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script></head>
     <link rel="stylesheet" href="../Styles/Shared/breaking-news.css">
     <link rel="stylesheet" href="../Styles/Shared/scrollbar.css">
-<body>
+    <link rel="stylesheet" href="../Styles/Shared/b-loading.css">
+    <script type="module" src="../Scripts/LoadingPage.js"></script>
+    <link rel="stylesheet" href="../Styles/loading.css">
+    <body>
 
   <header>
     
@@ -80,10 +83,25 @@
       <a href="../HTML/Premium.html"><button><i class="fa-solid fa-rocket"></i> Go Premium</button></a>
     </div>
   </header>
-  
+
+
+  <div class="for-teachers">
+  </div>
+
 
     <div class="classrooms" >
-
+      <div class="classroom classroom-loading">
+        <div class="full-classroom-detail">
+            <i class="circle-loading"></i>
+            <div class="classroom-detail-loading">
+                <h1></h1>
+                <p></p>
+                <p class="security-code"></p>
+            </div>
+        </div>
+        <a class="plus-button-a"><i class="fa-solid fa-plus"></i></a>
+    </div>
+    
     </div>
 
     <!--<div class="no-class-div">
