--- a/HTML/createdRooms.html
+++ b/HTML/createdRooms.html
@@ -10,6 +10,7 @@
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script>
     <link rel="stylesheet" href="../Styles/Shared/scrollbar.css">
     <link rel="stylesheet" href="../Styles/Shared/alert-box.css">
+    <link rel="stylesheet" href="../Styles/Shared/b-loading.css">
   </head>
 <body>
 
@@ -69,7 +70,7 @@
     </div>
   
     <ul class="links">
-      <li><a href="#" class="classroom-link">Class Rooms</a></li>
+      <li><a href="../HTML/classrooms.html" class="classroom-link">Class Rooms</a></li>
       <li><a href="" class="classroom-assignment">Assignments</a></li>
       <li><a href="../HTML/createdRooms.html" class="classroom-rooms" style="border-color: #4CC9FE;color: #4CC9FE;">Join Class</a></li>
       <li><a href="../HTML/setting.html" class="classroom-setting">Settings</a></li>
@@ -98,6 +99,7 @@
       <a class="plus-button-a"><i class="fa-solid fa-plus"></i></a>
 
     </div>
+
     <div class="classroom classroom-loading">
       
       <div class="full-classroom-detail">
@@ -112,6 +114,7 @@
       <a class="plus-button-a"><i class="fa-solid fa-plus"></i></a>
 
     </div>
+
     <div class="classroom classroom-loading">
       
       <div class="full-classroom-detail">
@@ -126,6 +129,7 @@
       <a class="plus-button-a"><i class="fa-solid fa-plus"></i></a>
 
     </div>
+
   </div>
 
 
