--- a/HTML/teacher-inbox.html
+++ b/HTML/teacher-inbox.html
@@ -8,13 +8,12 @@
     <link rel="stylesheet" href="../Styles/Shared/header.css">
     <link rel="stylesheet" href="../Styles/teacher-inbox.css">
     <script src=https://kit.fontawesome.com/4838fef60e.js crossorigin=anonymous></script>
-    <link rel="stylesheet" href="../Styles/Shared/chatBot.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0&family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
     <link rel="stylesheet" href="../Styles/Shared/scrollbar.css">
     <link rel="stylesheet" href="../Styles/Shared/scrollbar.css">
     <link rel="stylesheet" href="../Styles/Shared/alert-box.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-  
+    <link rel="stylesheet" href="../Styles/Shared/hamburger.css">
 </head>
 <body>
 
@@ -22,8 +21,7 @@
     <div class="logo">
       <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
         width="200pt" height="100pt" viewBox="0 0 300.000000 139.000000"
-        preserveAspectRatio="xMidYMid meet" class="svg-logo" >
-
+        preserveAspectRatio="xMidYMid meet" class="svg-logo">
         <g transform="translate(0.000000,139.000000) scale(0.100000,-0.100000)"
         fill="#000000" stroke="none">
         <path fill="#4CC9FE" d="M1346 964 c-13 -13 -16 -38 -15 -132 1 -64 6 -123 12 -129 12 -16 99
@@ -71,33 +69,38 @@
         20 -45 20 -14 0 -34 -9 -45 -20z m80 -20 c26 -48 -25 -89 -63 -51 -18 17 -19
         24 -9 46 14 31 56 34 72 5z"/>
         </g>
-        </svg>
+     </svg>
     </div>
-
-    <li class="links">
-      <a href="../HTML/classrooms.html" class="classroom-link">Class Rooms</a>
-      <a href="" class="classroom-assignment">Assignments</a>
-      <a href="../HTML/createdRooms.html" class="classroom-rooms">Join Class</a>
-      <a href="../HTML/setting.html" class="classroom-setting">Settings</a>
-      <a href="../HTML/profile.html" class="classroom-profile">Profile</a>
-    </li>
-
-
+  
+    <ul class="links">
+      <li><a href="../HTML/classrooms.html" class="classroom-link">Class Rooms</a></li>
+      <li><a href="" class="classroom-assignment">Assignments</a></li>
+      <li><a href="../HTML/createdRooms.html" class="classroom-rooms">Join Class</a></li>
+      <li><a href="../HTML/setting.html" class="classroom-setting">Settings</a></li>
+      <li><a href="../HTML/profile.html" class="classroom-profile">Profile</a></li>
+    </ul>
+  
+    <div class="button-premium">
+      <a href="../HTML/Premium.html"><button><i class="fa-solid fa-rocket"></i> Go Premium</button></a>
+    </div>
   </header>
 
-
-  <div class="classroom-links">
-
-
-    <li class="links">
+  <div class="hamburger-search-input">
+    <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
+      <span class="line line-1"></span>
+      <span class="line line-2"></span>
+      <span class="line line-3"></span>
+    </button>
+  
+    <div class="hamburger-menu-close">    
+  
       <a href="../HTML/classrooms.html" class="classroom-link">Home Work</a>
       <a href="" class="classroom-assignment" >Mark</a>
       <a href="../HTML/createdRooms.html" class="classroom-rooms">Resource</a>
       <a href="../HTML/setting.html" class="classroom-setting">Group Page</a>
-      <a href="../HTML/profile.html" class="classroom-profile" style="border-color: #4CC9FE;color: #4CC9FE;">Teacher Inbox</a>
-    </li>
-
-
+      <a href="../HTML/teacher-inbox.html" class="classroom-profile" style="border-color: #4CC9FE;color: #4CC9FE;">Teacher Inbox</a>
+  
+  </div>
   </div>
 
   <div class="for-teachers">
@@ -112,11 +115,11 @@
     <div class="chat-container">
         <header class="chat-header">
             <div class="teacher-info">
-                <img src="teacher-avatar.png" class="teacher-avatar">
+                <video src="../Images/photo_2025-01-11_13-13-22.mp4"class="teacher-avatar"></video>
                 <span class="teacher-name">Teacher Name</span>
             </div>
         </header>
-        <main class="chat-body">
+        <main class="chat-body" id="chat-body">
             <div class="message teacher-message">
                 <p>Hello! How can I help you today?</p>
                 <span class="timestamp">10:00 AM</span>
@@ -139,56 +142,6 @@
 
 
 
-      <!-- Chatbot Toggler -->
-      <button id="chatbot-toggler">
-        <span class="material-symbols-rounded">mode_comment</span>
-        <span class="material-symbols-rounded">close</span>
-      </button>
-  
-      <div class="chatbot-popup">
-        <!-- Chatbot Header -->
-        <div class="chat-header">
-          <div class="header-info">
-            <svg class="chatbot-logo" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 1024 1024">
-              <path
-                d="M738.3 287.6H285.7c-59 0-106.8 47.8-106.8 106.8v303.1c0 59 47.8 106.8 106.8 106.8h81.5v111.1c0 .7.8 1.1 1.4.7l166.9-110.6 41.8-.8h117.4l43.6-.4c59 0 106.8-47.8 106.8-106.8V394.5c0-59-47.8-106.9-106.8-106.9zM351.7 448.2c0-29.5 23.9-53.5 53.5-53.5s53.5 23.9 53.5 53.5-23.9 53.5-53.5 53.5-53.5-23.9-53.5-53.5zm157.9 267.1c-67.8 0-123.8-47.5-132.3-109h264.6c-8.6 61.5-64.5 109-132.3 109zm110-213.7c-29.5 0-53.5-23.9-53.5-53.5s23.9-53.5 53.5-53.5 53.5 23.9 53.5 53.5-23.9 53.5-53.5 53.5zM867.2 644.5V453.1h26.5c19.4 0 35.1 15.7 35.1 35.1v121.1c0 19.4-15.7 35.1-35.1 35.1h-26.5zM95.2 609.4V488.2c0-19.4 15.7-35.1 35.1-35.1h26.5v191.3h-26.5c-19.4 0-35.1-15.7-35.1-35.1zM561.5 149.6c0 23.4-15.6 43.3-36.9 49.7v44.9h-30v-44.9c-21.4-6.5-36.9-26.3-36.9-49.7 0-28.6 23.3-51.9 51.9-51.9s51.9 23.3 51.9 51.9z"
-              />
-            </svg>
-            <h2 class="logo-text">Chatbot</h2>
-          </div>style="border-color: #4CC9FE;color: #4CC9FE;"
-          <button id="close-chatbot" class="material-symbols-rounded">keyboard_arrow_down</button>
-        </div>
-  
-        <!-- Chatbot Body -->
-        <div class="chat-body">
-          <div class="message bot-message">
-            <svg class="bot-avatar" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 1024 1024">
-              <path
-                d="M738.3 287.6H285.7c-59 0-106.8 47.8-106.8 106.8v303.1c0 59 47.8 106.8 106.8 106.8h81.5v111.1c0 .7.8 1.1 1.4.7l166.9-110.6 41.8-.8h117.4l43.6-.4c59 0 106.8-47.8 106.8-106.8V394.5c0-59-47.8-106.9-106.8-106.9zM351.7 448.2c0-29.5 23.9-53.5 53.5-53.5s53.5 23.9 53.5 53.5-23.9 53.5-53.5 53.5-53.5-23.9-53.5-53.5zm157.9 267.1c-67.8 0-123.8-47.5-132.3-109h264.6c-8.6 61.5-64.5 109-132.3 109zm110-213.7c-29.5 0-53.5-23.9-53.5-53.5s23.9-53.5 53.5-53.5 53.5 23.9 53.5 53.5-23.9 53.5-53.5 53.5zM867.2 644.5V453.1h26.5c19.4 0 35.1 15.7 35.1 35.1v121.1c0 19.4-15.7 35.1-35.1 35.1h-26.5zM95.2 609.4V488.2c0-19.4 15.7-35.1 35.1-35.1h26.5v191.3h-26.5c-19.4 0-35.1-15.7-35.1-35.1zM561.5 149.6c0 23.4-15.6 43.3-36.9 49.7v44.9h-30v-44.9c-21.4-6.5-36.9-26.3-36.9-49.7 0-28.6 23.3-51.9 51.9-51.9s51.9 23.3 51.9 51.9z"
-              />
-            </svg>
-            <!-- prettier-ignore -->
-            <div class="message-text"> Hey there  <br /> How can I help you today? </div>
-          </div>
-        </div>
-  
-        <!-- Chatbot Footer -->
-        <div class="chat-footer">
-          <form action="#" class="chat-form">
-            <textarea placeholder="Message..." class="message-input" required></textarea>
-            <div class="chat-controls">
-              <button type="button" id="emoji-picker" class="material-symbols-outlined">sentiment_satisfied</button>
-              <div class="file-upload-wrapper">
-                <input type="file" accept="image/*" id="file-input" hidden />
-                <img src="#" />
-                <button type="button" id="file-upload" class="material-symbols-rounded">attach_file</button>
-                <button type="button" id="file-cancel" class="material-symbols-rounded">close</button>
-              </div>
-              <button type="submit" id="send-message" class="material-symbols-rounded">arrow_upward</button>
-            </div>
-          </form>
-        </div>
-      </div>
 
 
 
