--- a/Teacher_Panel/Teacher-Dashboard/teacher-dashboard.html
+++ b/Teacher_Panel/Teacher-Dashboard/teacher-dashboard.html
@@ -42,21 +42,21 @@
               </a>
             </li>
             <li>
-              <a href="#" class="#">
+              <a href="../../Teacher_Panel/Announcement/announcement.html" class="#">
                 <i class="fa-solid fa-bullhorn"></i>
                 <div class="notification-Announcement"></div>
                 <span class="links_name">Announcement</span>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="../../Teacher_Panel/Messages/message.html">
                 <i class="fa-solid fa-comment"></i>
                 <div class="notification-message"></div>
                 <span class="links_name">Messages</span>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="../../Teacher_Panel/Answers/answer.html">
                 <i class="fa-solid fa-file-circle-check"></i>
                 <div class="notification-Answers"></div>
                 <span class="links_name">Answers</span>
@@ -70,14 +70,14 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="../../Teacher_Panel/Time-Table/time-table.html">
                 <i class="fa-regular fa-calendar-days"></i>
                 <div class="notification-Timetable"></div>
                 <span class="links_name">Timetable</span>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="../../Teacher_Panel/Resources/resources.html">
                 <i class="fa-solid fa-book"></i>
                 <div class="notification-Resources"></div>
                 <span class="links_name">Resources</span>
